Layout bugfix

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -20,7 +20,7 @@ body {
     box-shadow: 0px 0px 15px #00000015;
     background: #fff;
     z-index: 9;
-    transition: transform .3s, padding .3s;
+    transition: transform .3s;
 }
 .header.scrolled {
     position: fixed;
@@ -146,7 +146,6 @@ body {
     width: 300px;
     height: 100vh;
     padding: 10px;
-    box-shadow: 0px 0px 18px #00000021;
     z-index: 20;
     pointer-events: none;
     transform: translateX(300px);
@@ -212,6 +211,7 @@ body {
 }
 .main-menu.active {
     pointer-events: all;
+    box-shadow: 0px 0px 18px #00000021;
     transform: translateX(0px);
 }
 .menu-burger {
